--- a/.gitignore
+++ b/.gitignore
@@ -81,6 +81,7 @@ celerybeat-schedule
 # Environments
 .env
 .venv
+.idea
 env/
 venv/
 ENV/
@@ -100,5 +101,9 @@ ENV/
 
 # images
 *.jpeg
+*.jpg
 *.png
 *.bmp
+
+# h5 weights
+*.h5
